change the layout of index. change the chapter href way

--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="Stylesheet" type="text/css" href='/fwiki/fwiki.css' />
-<link rel="Stylesheet" type="text/css" href='/fwiki/show.css' />
+<link rel="Stylesheet" type="text/css" href='./fwiki/fwiki.css' />
+<link rel="Stylesheet" type="text/css" href='./fwiki/show.css' />
 <link rel="Stylesheet" type="text/css" href='prettify/prettify.css' />
 
 
@@ -10,8 +10,8 @@
 <script src='prettify/prettify.js'></script>
 <script src='layer/layer.min.js'></script>
 <script src='js/index.js'></script>
-<script src='/fwiki/layout.js'></script>
-<script src='/fwiki/options.js'></script>
+<script src='./fwiki/layout.js'></script>
+<script src='./fwiki/options.js'></script>
 
 
 
@@ -27,7 +27,7 @@ $(document).ready(function(){
 
 
 
-    DIV_LISTPOST.on('click', 'div', EShowChapter);
+    //DIV_LISTPOST.on('click', 'div', EShowChapter);
     DIV_CLASS.on('click', 'div', ClassShowListPost);
     $('div#class_container h3').click(function(){
         $('div#class_div' ).toggle();
