--- a/web/index.html
+++ b/web/index.html
@@ -78,6 +78,11 @@ kernel, perf, cache
          <div id=list>
          <ul>
          
+         <li><a href="chapter.html?id=1499333006">
+            <span class=title>Blog system</span>
+            <span class=time>2017-07-06</span>
+            </a></li>
+         
          <li><a href="chapter.html?id=81453591">
             <span class=title>tcp timestamps</span>
             <span class=time>2017-06-15</span>
