--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@ kernel, perf, cache
          <ul>
          
          <li><a href="chapter.html?id=1499333006">
-            <span class=title>Blog system</span>
+            <span class=title>新 Blog 系统</span>
             <span class=time>2017-07-06</span>
             </a></li>
          
