--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,7 @@ kernel, perf, cache
             </a></li>
          
          <li><a href="chapter.html?id=75455062">
-            <span class=title>/proc/net/sockstat</span>
+            <span class=title>proc.net.sockstat</span>
             <span class=time>2017-04-06</span>
             </a></li>
          
