--- a/web/index.html
+++ b/web/index.html
@@ -67,6 +67,14 @@ $(document).ready(function(){
     <h1 id=title><a href=http://blog.fengidri.me >fengidri</a></h1>
 <div id='header'>
 kernel, perf, cache
+<div id=search>
+<form target=_blank action=https://www.google.com.hk/search >
+<input id=search name=ie value=UTF-8  type=hidden></input>
+<input id=search name=q value=site:blog.fengidri.me  type=hidden></input>
+<input id=search name=q ></input>
+<input type=submit id=search value=search ></input>
+</form>
+</div>
 </div>
 
 <div id=wrap>
@@ -942,15 +950,8 @@ kernel, perf, cache
     fengidri@yeah.net 手工打造.
     <br />
 <a href=http://www.miitbeian.gov.cn/  >粤ICP备15026997号</a>
-    <script type="text/javascript">
-        var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cspan id='cnzz_stat_icon_1253644473'%3E%3C/span%3E%3Cscript src='"
-                    + cnzz_protocol
-                    + "s95.cnzz.com/z_stat.php%3Fid%3D1253644473%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
-    </script>
 </div>
 
 </body>
 
 </html>
-<!-- test -->
