--- a/web/resume.html
+++ b/web/resume.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<meta  content="text/html; charset=UTF-8">
+<meta content="text/html; charset=UTF-8">
+<meta charset="UTF-8">
+
 <script src='js/jquery.js'></script>
 <script src='js/index.js'></script>
 <script src='js/resume.js'></script>
